selection mechanism expansion, low survival rate, testing

--- a/src/makefile
+++ b/src/makefile
@@ -16,7 +16,10 @@ neurons.o: neurons.c neurons.h
 brain.o: brain.c brain.h
 	$(CC) $^ -c
 
-sim: main.c env.c env.h spawn.c spawn.h graphics.o rand.o log.o neurons.o brain.o
+selector.o: selector.c selector.h
+	$(CC) $^ -c
+
+sim: main.c env.c env.h spawn.c spawn.h graphics.o rand.o log.o neurons.o brain.o selector.o
 	$(CC) $^ -g -lm -lgd -o $@
 
 clean:
