--- a/src/settings.conf
+++ b/src/settings.conf
@@ -5,17 +5,17 @@ graphics=gifs/
 log=log
 
 [main]
-; The number of generations per simulation run.
-generations=1025
+# The number of generations per simulation run.
+generations=1
 # The number of iterations each generation is allowed.
-iterations=130
+iterations=10
 # The size of the environment.
-x_dim=128
-y_dim=128
+x_dim=50
+y_dim=50
 # The population of every environment.
-population=1000
+population=10
 # The number of genes each brain has.
-genome_size=12
+genome_size=4
 # The natural selection type to be applied at the
 # end of each generation. Ranges from 0 - 4
 selector_type=3
