config interface implemented, setup and teardown streamlined

--- a/src/settings.conf
+++ b/src/settings.conf
@@ -1,24 +1,25 @@
 [paths]
 # Path the the out put directory to store generated gifs
+# dont forget the trailing backslash
 graphics=gifs/
 # Path and name of the log file to use
 log=log
 
 [main]
 # The number of generations per simulation run.
-generations=1
+generations=1025
 # The number of iterations each generation is allowed.
-iterations=10
+iterations=130
 # The size of the environment.
-x_dim=50
-y_dim=50
+x_dim=128
+y_dim=128
 # The population of every environment.
-population=10
+population=1000
 # The number of genes each brain has.
-genome_size=4
+genome_size=12
 # The natural selection type to be applied at the
 # end of each generation. Ranges from 0 - 4
-selector_type=3
+selector_type=1
 
 [selector]
 # Max amount of radiation a brain can endure.
