--- a/settings.conf
+++ b/settings.conf
@@ -1,8 +1,8 @@
 [paths]
-# Path the the out put directory to store generated gifs
-# dont forget the trailing backslash
+# Path of the output directory to store generated gifs.
+# Dont forget the trailing forward slash.
 graphics=gifs/
-# Path and name of the log file to use
+# Path of the log file to use
 log=log
 
 [main]
