--- a/settings.conf
+++ b/settings.conf
@@ -26,6 +26,8 @@ selector_type=5
 radiation_max=-0.2
 # Minimum amount of light a brain requires to live.
 light_min=0.5
+# Maximum amount of light a brain can tolerate.
+light_max=-0.5
 # Temp range a brain can survive in.
 temp_min=-0.3
 temp_max=0.25
