readme, settings comments

--- a/settings.conf
+++ b/settings.conf
@@ -9,7 +9,7 @@ log=log
 # The number of generations per simulation run.
 generations=1025
 # The number of iterations each generation is allowed.
-iterations=130
+iterations=90
 # The size of the environment.
 x_dim=128
 y_dim=128
@@ -18,16 +18,28 @@ population=1000
 # The number of genes each brain has.
 genome_size=12
 # The natural selection type to be applied at the
-# end of each generation. Ranges from 0 - 4
-selector_type=5
+# end of each generation. Options:
+# 0 - Migrate north
+# 1 - Migrate East 
+# 2 - Move towards light
+# 3 - Stay away from radiation
+# 4 - Find an optimal warm band
+# 5 - Exist in either very bright or very dark conditions
+selector_type=3
 
 [selector]
+# Selector values are valid in the range 1 to -1. 1 represents 
+# the smallest possible distance to the source, while -1 represents
+# the furthest distance away.
+
 # Max amount of radiation a brain can endure.
-radiation_max=-0.2
+radiation_max=0.3
 # Minimum amount of light a brain requires to live.
 light_min=0.5
 # Maximum amount of light a brain can tolerate.
+# Use this for a bimodal distribution (option 5), brians can 
+# survive in very light or very dark conditions.
 light_max=-0.5
 # Temp range a brain can survive in.
 temp_min=-0.3
-temp_max=0.25
+temp_max=0.4
